--- a/Lab3-Text Classification/Sentiment Analysis.ipynb
+++ b/Lab3-Text Classification/Sentiment Analysis.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "f80701dc",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write your names In this cell\n",
-    "Student_1 = \"\"\n",
-    "Student_2 = \"\""
+    "Student_1 = \"Sara Bisheer Fikry\"\n",
+    "Student_2 = \"Menna Mohammed Abdelbaset\""
    ]
   },
   {
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "44d64d87",
    "metadata": {},
    "outputs": [],
@@ -47,10 +47,10 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package twitter_samples to\n",
-      "[nltk_data]     C:\\Users\\dell\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Unzipping corpora\\twitter_samples.zip.\n",
+      "[nltk_data]     C:\\Users\\hp\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package twitter_samples is already up-to-date!\n",
       "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     C:\\Users\\dell\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]     C:\\Users\\hp\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     },
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "id": "0395509a",
    "metadata": {},
    "outputs": [],
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "id": "5a8b8f62",
    "metadata": {},
    "outputs": [],
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 10,
    "id": "55a0b7ab",
    "metadata": {},
    "outputs": [],
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 11,
    "id": "7b6572c0",
    "metadata": {},
    "outputs": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "id": "4ebbd172",
    "metadata": {},
    "outputs": [],
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 13,
    "id": "42c66c69",
    "metadata": {},
    "outputs": [],
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 14,
    "id": "09a5b00e",
    "metadata": {},
    "outputs": [],
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 15,
    "id": "0a4df3cd",
    "metadata": {},
    "outputs": [],
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 16,
    "id": "57be75fa",
    "metadata": {},
    "outputs": [
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 17,
    "id": "bc79b053",
    "metadata": {},
    "outputs": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 18,
    "id": "baf00352",
    "metadata": {},
    "outputs": [
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "36620eb5",
    "metadata": {},
    "outputs": [],
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "b153d632",
    "metadata": {},
    "outputs": [],
@@ -534,24 +534,29 @@
     "    Returns:\n",
     "    - processed_corpus: List of strings\n",
     "    \"\"\"\n",
-    "    processed_corpus = None\n",
+    "    processed_corpus = []\n",
     "    ################################# TODO: implement the following steps ####################################\n",
     "    \n",
     "    # preprocess tweets (you should have a list of lists since you will call process_tweet on all tweets)\n",
     "    \n",
+    "    for tweet in corpus:\n",
+    "        processed_corpus.append(' '.join(process_tweet(tweet)))\n",
+    "\n",
+    "    \n",
     "    \n",
     "    # append the tokens of each tweet together seperating them by white space\n",
+    "\n",
     "    # As the CountVectorizer needs list of strings\n",
     "    # hint: check str.join()\n",
     "    \n",
     "    ##########################################################################################################\n",
     "    \n",
-    "    return processed_corpus"
+    "    return processed_corpus\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "072876c7",
    "metadata": {},
    "outputs": [],
@@ -566,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "483964d1",
    "metadata": {},
    "outputs": [],
@@ -581,16 +586,15 @@
     "    Returns:\n",
     "    - vectorizer: CountVectorizer Object after training\n",
     "    \"\"\"\n",
-    "    \n",
-    "    vectorizer = None\n",
+    "\n",
+    "    vectorizer = CountVectorizer(token_pattern=r'\\S+')\n",
     "    ################################### TODO: Create and Fit the vectorizer ##################################\n",
     "    # Create the Vectorizer\n",
     "    # hint1: check CountVectorizer from sklearn\n",
     "    # hint2: You will need to specify the token_pattern parameter as the default one will miss some tokens\n",
-    "    \n",
-    "    \n",
     "    # fit the vectorizer\n",
-    "    \n",
+    "\n",
+    "    vectorizer.fit(processed_train_corpus)\n",
     "    ##########################################################################################################\n",
     "    \n",
     "    return vectorizer"
@@ -598,13 +602,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "839ec8c3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9083\n"
+     ]
+    }
+   ],
    "source": [
     "BoWVectorizer = train_count_vectorizer(NB_processed_train_x)\n",
     "train_x_BOW = BoWVectorizer.transform(NB_processed_train_x)\n",
+    "print(len(BoWVectorizer.vocabulary_))\n",
     "test_x_BOW = BoWVectorizer.transform(NB_processed_test_x)\n",
     "assert len(BoWVectorizer.vocabulary_) == 9083, \"Count Vectorizer Error\"\n",
     "assert train_x_BOW.shape == (8000, 9083), \"Count Vectorizer Error\"\n",
@@ -613,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "983b0b18",
    "metadata": {},
    "outputs": [],
@@ -623,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "ebf39648",
    "metadata": {},
    "outputs": [],
@@ -638,21 +651,20 @@
     "    Returns:\n",
     "    - MultinomialNB Classifier\n",
     "    \"\"\"\n",
-    "    \n",
     "    NB = None\n",
     "    ############################## TODO: create and train Add-one Smoothed NB Classifer #############################\n",
     "    # Create the NB classifier (hint: check MultinomialNB sklearn documentation for add-one smoothnig)\n",
-    "    \n",
+    "    NB=MultinomialNB(alpha=1)\n",
     "    \n",
     "    # train\n",
-    "    \n",
+    "    NB.fit(X,Y)\n",
     "    ##################################################################################################################\n",
     "    return NB"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "90d52a78",
    "metadata": {},
    "outputs": [],
@@ -666,10 +678,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "7ab3299f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2000,)\n"
+     ]
+    }
+   ],
    "source": [
     "Y_pred = predict(NB, test_x_BOW)\n",
     "print(Y_pred.shape)"
@@ -685,10 +705,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "a714ff53",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.99      1.00      0.99      1000\n",
+      "         1.0       1.00      0.99      0.99      1000\n",
+      "\n",
+      "    accuracy                           0.99      2000\n",
+      "   macro avg       0.99      0.99      0.99      2000\n",
+      "weighted avg       0.99      0.99      0.99      2000\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.metrics import classification_report\n",
     "print(classification_report(Y_test, Y_pred))"
