add cosine similarity and complete get_country

--- a/Lab3-Text Classification/Sentiment Analysis.ipynb
+++ b/Lab3-Text Classification/Sentiment Analysis.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "f80701dc",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write your names In this cell\n",
-    "Student_1 = \"Sara Bisheer Fikry\"\n",
-    "Student_2 = \"Menna Mohammed Abdelbaset\""
+    "Student_1 = \"\"\n",
+    "Student_2 = \"\""
    ]
   },
   {
