--- a/Lab4-Word Embedding/Word Embeddings.ipynb
+++ b/Lab4-Word Embedding/Word Embeddings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "5998a9d2",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "3162cd45",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "6f04faa4",
    "metadata": {},
    "outputs": [
@@ -128,7 +128,7 @@
        "4  Athens   Greece    Cairo        Egypt"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "f132f973",
    "metadata": {},
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "be33643b",
    "metadata": {},
    "outputs": [],
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "53d22a8b",
    "metadata": {},
    "outputs": [],
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "21f97520",
    "metadata": {},
    "outputs": [
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "fd5c09ff",
    "metadata": {},
    "outputs": [],
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "5665d73b",
    "metadata": {},
    "outputs": [
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "d291c577",
    "metadata": {},
    "outputs": [],
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "0336f74d",
    "metadata": {},
    "outputs": [],
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "aa3fd7e4",
    "metadata": {},
    "outputs": [
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "8583b499",
    "metadata": {},
    "outputs": [],
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "94395a58",
    "metadata": {},
    "outputs": [
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "96439ecc",
    "metadata": {},
    "outputs": [
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "02f05e79",
    "metadata": {},
    "outputs": [],
@@ -567,18 +567,25 @@
     "# Q5: Does the plot above make sense?\n",
     "A5 = \"\"\"\n",
     "Type Yes or No\n",
+    "Yes\n",
     "\"\"\"\n",
     "\n",
     "# Q6: Illustrate the plot above\n",
     "A6 = \"\"\"\n",
     "Type your answer here\n",
+    "there is nearly three categories of words and their embeddings are clustered in the plot in 3 cluster\n",
+    "1 - the first is (village, town, city, country, continent) which are areas but with different sizes so it is meaningful to be near each other\n",
+    "2 - the second is (oil, gas, petroleum) which are diffferent types of energy resources so it is meaningful to be near each other\n",
+    "3 - the third is (happy, joyful, sad) which are emotions so it is meaningful to be near each other\n",
+    "\n",
+    "\n",
     "\"\"\"\n",
     "####################################################################################################"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "22d7959d",
    "metadata": {},
    "outputs": [],
