--- a/Lab5-Name Entity Recognition/Named_Entity_Recognition.ipynb
+++ b/Lab5-Name Entity Recognition/Named_Entity_Recognition.ipynb
@@ -39,7 +39,8 @@
     "import torch\n",
     "from torch import nn\n",
     "from utils import get_params, get_vocab\n",
-    "import random as rnd"
+    "import random as rnd\n",
+    "from torch.utils.data import DataLoader\n"
    ]
   },
   {
@@ -62,7 +63,7 @@
     "vocab, tag_map = get_vocab('data/large/words.txt', 'data/large/tags.txt')\n",
     "t_sentences, t_labels, t_size = get_params(vocab, tag_map, 'data/large/train/sentences.txt', 'data/large/train/labels.txt')\n",
     "v_sentences, v_labels, v_size = get_params(vocab, tag_map, 'data/large/val/sentences.txt', 'data/large/val/labels.txt')\n",
-    "test_sentences, test_labels, test_size = get_params(vocab, tag_map, 'data/large/test/sentences.txt', 'data/large/test/labels.txt')"
+    "test_sentences, test_labels, test_size = get_params(vocab, tag_map, 'data/large/test/sentences.txt', 'data/large/test/labels.txt')\n"
    ]
   },
   {
@@ -232,7 +233,16 @@
     "    - pad: the id of the <PAD> token (to be used for padding all sentences and labels to have the same length)\n",
     "    \"\"\"\n",
     "    ##################### TODO: create two tensors one for x and the other for labels ###############################\n",
-    "    pass\n",
+    "    x_padded=[]\n",
+    "    for seq in x:\n",
+    "      x_padded.append(torch.tensor(seq, dtype=torch.long))\n",
+    "    y_padded=[]\n",
+    "    for seq in y:\n",
+    "      y_padded.append(torch.tensor(seq, dtype=torch.long))\n",
+    "    # Padding the sequences to have the same length\n",
+    "    self.x = nn.utils.rnn.pad_sequence(x_padded, batch_first=True, padding_value=pad)\n",
+    "    self.y = nn.utils.rnn.pad_sequence(y_padded, batch_first=True, padding_value=0)\n",
+    "\n",
     "    #################################################################################################################\n",
     "\n",
     "  def __len__(self):\n",
@@ -240,7 +250,7 @@
     "    This function should return the length of the dataset (the number of sentences)\n",
     "    \"\"\"\n",
     "    ###################### TODO: return the length of the dataset #############################\n",
-    "    pass\n",
+    "    return len(self.x)\n",
     "    ###########################################################################################\n",
     "\n",
     "  def __getitem__(self, idx):\n",
@@ -248,13 +258,13 @@
     "    This function returns a subset of the whole dataset\n",
     "    \"\"\"\n",
     "    ###################### TODO: return a tuple of x and y ###################################\n",
-    "    pass\n",
+    "    return self.x[idx], self.y[idx]\n",
     "    ##########################################################################################"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -262,7 +272,20 @@
     "id": "sz-saCtRs7Pz",
     "outputId": "03e6cdf1-7785-4725-d4ad-fb085c70e1c5"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([5, 30]) torch.Size([5, 30]) torch.Size([3, 30]) torch.Size([3, 30])\n",
+      "tensor([    0,     1,     2,     3,     4,     5,     6,     7,     8,     9,\n",
+      "           10,    11,    12,    13,    14,     9,    15,     1,    16,    17,\n",
+      "           18,    19,    20,    21, 35180, 35180, 35180, 35180, 35180, 35180]) \n",
+      " tensor([0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0])\n"
+     ]
+    }
+   ],
    "source": [
     "batch_size = 5\n",
     "mini_sentences = t_sentences[0: 8]\n",
@@ -303,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "id": "xHeJcz1JuhYa"
    },
@@ -342,8 +365,9 @@
     "\n",
     "    final_output = None\n",
     "    ######################### TODO: implement the forward pass ####################################\n",
-    "    final_output = self.lstm(self.embedding)\n",
-    "    final_output = self.linear(final_output)\n",
+    "    embedding=self.embedding(sentences)\n",
+    "    lstm_out,_ = self.lstm(embedding)\n",
+    "    final_output = self.linear(lstm_out)\n",
     "\n",
     "    ###############################################################################################\n",
     "    return final_output"
@@ -351,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -402,17 +426,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "id": "-yvaq8i2CCLD"
    },
    "outputs": [],
    "source": [
+    "from torch.nn import CrossEntropyLoss\n",
+    "from torch.optim import Adam\n",
+    "\n",
     "def train(model, train_dataset, batch_size=512, epochs=5, learning_rate=0.01):\n",
     "  \"\"\"\n",
     "  This function implements the training logic\n",
     "  Inputs:\n",
-    "  - model: the model ot be trained\n",
+    "  - model: the model to be trained\n",
     "  - train_dataset: the training set of type NERDataset\n",
     "  - batch_size: integer represents the number of examples per step\n",
     "  - epochs: integer represents the total number of epochs (full training pass)\n",
@@ -422,13 +449,13 @@
     "  ############################## TODO: replace the Nones in the following code ##################################\n",
     "  \n",
     "  # (1) create the dataloader of the training set (make the shuffle=True)\n",
-    "  train_dataloader = None\n",
+    "  train_dataloader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
     "\n",
     "  # (2) make the criterion cross entropy loss\n",
-    "  criterion = None\n",
+    "  criterion = CrossEntropyLoss()\n",
     "\n",
     "  # (3) create the optimizer (Adam)\n",
-    "  optimizer = None\n",
+    "  optimizer = Adam(model.parameters(), lr=learning_rate)\n",
     "\n",
     "  # GPU configuration\n",
     "  use_cuda = torch.cuda.is_available()\n",
@@ -444,50 +471,54 @@
     "    for train_input, train_label in tqdm(train_dataloader):\n",
     "\n",
     "      # (4) move the train input to the device\n",
-    "      train_label = None\n",
+    "      train_input = train_input.to(device)\n",
     "\n",
     "      # (5) move the train label to the device\n",
-    "      train_input = None\n",
+    "      train_label = train_label.to(device)\n",
     "\n",
     "\n",
     "      # (6) do the forward pass\n",
-    "      output = None\n",
+    "      output = model(train_input)\n",
     "      \n",
     "      # (7) loss calculation (you need to think in this part how to calculate the loss correctly)\n",
-    "      batch_loss = None\n",
-    "\n",
+    "      output = output.view(-1, output.shape[-1])  # Shape: (batch_size x seq_length, num_classes) instead of (batch_size, num_classes, seq_length)\n",
+    "      train_label = train_label.view(-1)          # Shape: (batch_size x seq_length)\n",
+    "      batch_loss = criterion(output, train_label)\n",
     "      # (8) append the batch loss to the total_loss_train\n",
-    "      total_loss_train += None\n",
+    "      total_loss_train += batch_loss.item()\n",
     "      \n",
     "      # (9) calculate the batch accuracy (just add the number of correct predictions)\n",
-    "      acc = None\n",
+    "      acc = (output.argmax(dim=-1) == train_label).sum().item()\n",
+    "\n",
     "      total_acc_train += acc\n",
     "\n",
     "      # (10) zero your gradients\n",
-    "      None\n",
+    "      optimizer.zero_grad()\n",
     "\n",
     "      # (11) do the backward pass\n",
-    "      None\n",
+    "      batch_loss.backward()\n",
     "\n",
     "      # (12) update the weights with your optimizer\n",
-    "      None\n",
+    "      optimizer.step()\n",
     "      \n",
     "    # epoch loss\n",
     "    epoch_loss = total_loss_train / len(train_dataset)\n",
     "\n",
     "    # (13) calculate the accuracy\n",
-    "    epoch_acc = None\n",
-    "\n",
+    "    epoch_acc = total_acc_train / (sum(len(sequence) for _, sequence in train_dataset))\n",
+    "    print(total_acc_train)\n",
+    "    print(train_dataset)\n",
     "    print(\n",
     "        f'Epochs: {epoch_num + 1} | Train Loss: {epoch_loss} \\\n",
     "        | Train Accuracy: {epoch_acc}\\n')\n",
     "\n",
-    "  ##############################################################################################################"
+    "  ##############################################################################################################\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "id": "3BI7_ANkLf7G"
    },
@@ -500,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -508,7 +539,93 @@
     "id": "LMXjDv51LU6k",
     "outputId": "92dbd51b-4732-48cb-f4ad-7ae7b09b1283"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 66/66 [00:41<00:00,  1.60it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3314396\n",
+      "<__main__.NERDataset object at 0x0000024DB79D7E50>\n",
+      "Epochs: 1 | Train Loss: 0.0005448720701169783         | Train Accuracy: 0.9493354872711441\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 66/66 [00:53<00:00,  1.22it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3402912\n",
+      "<__main__.NERDataset object at 0x0000024DB79D7E50>\n",
+      "Epochs: 2 | Train Loss: 0.00017194108666321122         | Train Accuracy: 0.9746889393001994\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 66/66 [00:52<00:00,  1.25it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3433652\n",
+      "<__main__.NERDataset object at 0x0000024DB79D7E50>\n",
+      "Epochs: 3 | Train Loss: 0.00011597254427551052         | Train Accuracy: 0.98349373295754\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 66/66 [00:39<00:00,  1.67it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3453840\n",
+      "<__main__.NERDataset object at 0x0000024DB79D7E50>\n",
+      "Epochs: 4 | Train Loss: 7.71157361405003e-05         | Train Accuracy: 0.9892761394101877\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 66/66 [00:21<00:00,  3.03it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3462337\n",
+      "<__main__.NERDataset object at 0x0000024DB79D7E50>\n",
+      "Epochs: 5 | Train Loss: 5.934865069391119e-05         | Train Accuracy: 0.9917099172796223\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "train(model, train_dataset)"
    ]
@@ -531,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "id": "Gz5mxUAJM1xS"
    },
@@ -547,7 +664,7 @@
     "  ########################### TODO: Replace the Nones in the following code ##########################\n",
     "\n",
     "  # (1) create the test data loader\n",
-    "  test_dataloader = None\n",
+    "  test_dataloader = DataLoader(test_dataset, batch_size=batch_size, shuffle=False)\n",
     "\n",
     "  # GPU Configuration\n",
     "  use_cuda = torch.cuda.is_available()\n",
@@ -558,24 +675,24 @@
     "  total_acc_test = 0\n",
     "  \n",
     "  # (2) disable gradients\n",
-    "  with None:\n",
+    "  with torch.no_grad():\n",
     "\n",
     "    for test_input, test_label in tqdm(test_dataloader):\n",
     "      # (3) move the test input to the device\n",
-    "      test_label = None\n",
+    "      test_label = test_label.to(device)\n",
     "\n",
     "      # (4) move the test label to the device\n",
-    "      test_input = None\n",
+    "      test_input = test_input.to(device)\n",
     "\n",
     "      # (5) do the forward pass\n",
-    "      output = None\n",
+    "      output = model(test_input)\n",
     "\n",
     "      # accuracy calculation (just add the correct predicted items to total_acc_test)\n",
-    "      acc = None\n",
+    "      acc = (output.argmax(-1)==test_label).sum().item()\n",
     "      total_acc_test += acc\n",
     "    \n",
     "    # (6) calculate the over all accuracy\n",
-    "    total_acc_test /= None\n",
+    "    total_acc_test /= sum(len(sequence) for _, sequence in test_dataset)\n",
     "  ##################################################################################################\n",
     "\n",
     "  \n",
@@ -584,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -592,7 +709,23 @@
     "id": "6FD8JNcHWmMY",
     "outputId": "b4916766-dd57-4716-db7f-90c6d46655fa"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 15/15 [00:01<00:00,  9.12it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Test Accuracy: 0.9847333095039517\n"
+     ]
+    }
+   ],
    "source": [
     "evaluate(model, test_dataset)"
    ]
